--- a/snitch-client/styles/globals.css
+++ b/snitch-client/styles/globals.css
@@ -29,8 +29,8 @@ a {
 /* NAVBAR */
 .top {
   width: 100%;
-  height: 50px;
-  background-color: white;
+  height: 100px;
+  background-color: rgb(83, 30, 143);
   position: sticky;
   top: 0;
   display: flex;
@@ -50,12 +50,12 @@ a {
 .topIcon {
   font-size: 20px;
   margin-right: 10px;
-  color: #444;
+  color: #fff6f6;
   cursor: pointer;
 }
 
 .topCenter {
-  flex: 6;
+  flex: 9;
 }
 
 .topList {
@@ -74,7 +74,7 @@ a {
 }
 
 .topListItem:hover{
-    color: gray;
+    color: #eeda2b;
 }
 
 .topImg {
