--- a/snitch-client/styles/globals.css
+++ b/snitch-client/styles/globals.css
@@ -30,7 +30,7 @@ a {
 .top {
   width: 100%;
   height: 100px;
-  background-color: #9054F7 ;
+  background-color: #b086fa ;
   position: sticky;
   top: 0;
   display: flex;
