--- a/snitch-client/styles/globals.css
+++ b/snitch-client/styles/globals.css
@@ -445,4 +445,11 @@ button:hover {
         width: 100%;
         padding: 0 5px;
     }
+        .bg-custom-1 {
+            background-color: #85144b;
+        }
+    
+        .bg-custom-2 {
+            background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+        }
 }
